# SRBenchmark

./: .gitignore  README.md  benchmark.py  core_utils.py  dataset.py  evaluator.py  logger.py  main.py  prepare_data.py  pyproject.toml  utils.py  visualizer.py
experiments/: run_benchmark_all.yaml  run_benchmark_all_fast.yaml
models/ESRGAN/: config.yaml  model.py
models/ESRGAN/weights/: weights.safetensors
models/HAT/: config.yaml  model.py  utils.py
models/HAT/weights/: weights.safetensors
models/RCAN/: config.yaml  model.py
models/RCAN/weights/: weights.safetensors
models/RealESRGAN/: config.yaml  model.py
models/RealESRGAN/weights/: weights.safetensors
models/SRGAN/: config.yaml  model.py
models/SRGAN/weights/: weights.safetensors
models/SRResNet/: config.yaml  model.py
models/SRResNet/weights/: weights.safetensors
models/SwinIR/: config.yaml  model.py
tests/: test_benchmark.py  test_core_utils.py  test_dataset.py  test_evaluator.py  test_visualizer.py
